# dof-rag

./: .env-example  .gitignore  DEVELOPER_GUIDE.md  README.md  chatbot_server.py  config.py  config.yaml  convert_marker_with_gemini.py  convert_with_docling.py  convert_with_gemini.py  convert_with_pymu.py  convert_with_pymullm.py  extract_embeddings.py  generate_questions.md  generate_questions.py  generate_questions_EN.md  limpiar_pycache.py  main.py  pyproject.toml  query_bd.md  query_bd.py  query_bd_EN.md  replace_image_refs.py  run.py  run_tests.py  test_config.py  test_gemini.py  test_moondream.py  test_results-0_5b.txt  test_results-2b.txt  test_results_gemini_tokens_256.txt  test_results_gemini_tokens_512.txt
chatbot_gradio/: README_chatbot_gradio.md  app.py
chatbot_gradio/config/: __init__.py  config.py
chatbot_gradio/core/: __init__.py  database.py  embeddings.py  llm_client.py  rag_pipeline.py
chatbot_gradio/interface/: __init__.py  chat_ui.py  render_context.py
dof_db/: db.sqlite
extract_captions/: README_EXTRACT.md  error_images.txt  process_images.ipynb  process_images_batch.py
extract_captions/clientes/: AbstractClient.py  (+3 more)
marimo_interface/: pyproject.toml  vector_chat_interface.py
markdown_models/: README.md
modules_captions/: README.md  __init__.py  captions.db  config.json  extract_captions.py
test/: README_test.md  analizar_resultados.py  run_all_database_tests.py  run_all_tests.py  run_database_tests.py  run_tests.py  test_chunkers.py  test_client_configs.py
test_captions/: README_TEST.md  test_gemini.ipynb  test_gemini.py  test_moondream.py  test_ollama.py
tests/: README_TEST.md  process_images.ipynb  test_gemini.ipynb  test_gemini.py  test_moondream.py  test_ollama.py
(+153 files in other folders)
